package level.tiles;

import com.badlogic.gdx.graphics.g2d.SpriteBatch;

public class Wall extends Tile {
    @Override
    public void render(SpriteBatch batch, int x, int y) {

    }
}
